samples/_failures_safe/1761369814_51d497_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ae9138c.c: In function ‘main’:
./samples/SAFE/__tmp_3ae9138c.c:134:9: error: expected declaration or statement at end of input
  134 |         read_matrix(matrix2, rows2, cols2);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_3ae9138c.c:134:9: error: expected declaration or statement at end of input
